# Pirohuni-Forecast-Bot-Summer

./: .env.example  .gitignore  INCIDENTS.md  README.md  artifacts.py  asknews_research.py  compiler.py  config.py  experiment.py  fine_print_scraper.py  forecasting_bot.py  google_workspace_exporter.py  llm_client.py  llm_logging.py  manifold_research.py  metaculus_client.py  monetary_cost_manager.py  orchestrator.py  polymarket_research.py  prompt_preview.py  pyproject.toml  query_maker.py  research_trace.py  resolution_criteria_scraper.py  run_logging.py  serp_research.py  source_ledger.py  tavily_research.py  test_manifold_market_api.py  test_query_maker.py  utils.py
.github/workflows/: external-cron-forecast.yaml  external-cron-metaculus-cup-test.yaml  main.yaml  main_ec2.yml  test-one-metaculus-cup-question.yaml
Adapters/: GoogleSheets.py  GoogleTrends.py  Metaculus.py  Pdf.py  Wayback.py  Wikipedia.py  YahooQuotes.py  __init__.py  base.py  registry.py
Crawl4AI/: .gitignore  NOTES.md  crawl.py
Jina Crawler/: config.toml  scraper.py
Web Scraper/: .env.example  README.md  config.yaml  pyproject.toml  requirements.txt
Web Scraper/scraper/: __init__.py  base.py  config.py  core.py  dns_fallback.py  output.py  validation.py
Web Scraper/scraper/adapters/: __init__.py  base.py  google_trends.py
Web Scraper/scraper/providers/: __init__.py  crawl4ai.py  firecrawl.py  jina.py  pdf.py
docs/: templatePrompts.py
docs/prompt_previews/: 2026-05-14_10-02-53_Will_at_least_5_non-passengers_be_linked_to_the_MV_Hondius_hantavirus_outbreak_b.txt  2026-05-14_10-14-57_Will_at_least_5_non-passengers_be_linked_to_the_MV_Hondius_hantavirus_outbreak_b.txt  2026-05-14_10-40-30_Will_the_UK_National_Threat_Level_reduce_from_SEVERE_before_September_2026.txt
docs/query_maker_tests/: 20260516T084505Z_what-will-be-the-global-peace-index-score-for-iran-in-2026.json  20260516T084505Z_what-will-be-the-global-peace-index-score-for-iran-in-2026.md
eval_tools/: compile_replay.py  dry_run.py  replay.py  score_forecasts.py
forecasters/: base.py  binary.py  multiple_choice.py  numeric.py
research/: __init__.py  asknews_research.py  evidence_plan.py  firecrawl_research.py  firecrawl_scrape.py  kalshi_research.py  manifold_research.py  metaculus_research.py  pipeline.py  polymarket_research.py  serp_research.py  tavily_research.py
resolution_scraper/: orchestrator.py
resolution_scraper/adapters/: __init__.py  wikipedia.py
