[project]
name = "metaculus-bot-pirohuni"
version = "0.1.0"
description = ""
authors = [
    {name = "Pirohuni"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "asknews>=0.13.10,<0.14.0",
    "forecasting-tools>=0.2.85,<0.3.0",
    "httpx>=0.24.0",
    "asyncio-extras>=1.3.2",
    "dotenv (>=0.9.9,<0.10.0)",
    "tenacity (>=8.1,<9)",
    "cachetools (>=5.5,<7)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "tldextract (>=5.3.1,<6.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "wikipedia-api (>=0.8.1,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
