[project]
name = "metaculus-bot-pirohuni"
version = "0.1.0"
description = ""
authors = [
    {name = "Pirohuni"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "asknews>=0.13.10,<0.14.0",
    "forecasting-tools>=0.2.85,<0.3.0",
    "httpx>=0.24.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
