[project]
name = "web-scraper"
version = "0.1.0"
description = "Universal web scraper with modular provider fallback chain"
authors = [
    {name = "Pirohuni"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "httpx>=0.24.0",
    "crawl4ai>=0.4.0",
    "pdfplumber>=0.9.0",
    "pypdf>=3.0.0",
    "firecrawl-py>=0.0.1",
    "google-search-results>=2.4.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.0.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
